Add ChildContent to DeviceProfileEnumCard for custom UI
DeviceProfileEnumCard now supports a ChildContent parameter, enabling insertion of custom content such as a MudText and MudSlider for "Prisgräns Elpatron" in the OpMode card within Settings.razor, enhancing UI flexibility and extensibility.

--- a/MyHome.Web/Components/DeviceProfileEnumCard.razor
+++ b/MyHome.Web/Components/DeviceProfileEnumCard.razor
@@ -69,6 +69,7 @@
                         }
                     </MudSelect>
                 </MudItem>
+                @ChildContent
             </MudStack>
         }
         else
@@ -84,4 +85,7 @@
 
     [Parameter]
     public IDeviceProfile<T>? Profile { get; set; }
+
+    [Parameter]
+    public RenderFragment? ChildContent { get; set; }
 }
